# COS-Lab

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  no_format.txt
LAB1/: CMakeLists.txt
LAB1/EX1/: CMakeLists.txt  lab1_1.cpp
LAB10-11/: CMakeLists.txt
LAB10-11/EX1/: CMakeLists.txt  lab10-11_1.cpp
LAB10-11/EX2/: CMakeLists.txt  shm_counter_common.h  shm_counter_named_sem.c  shm_counter_unnamed_sem.cpp  shm_counter_unsynced.cpp
LAB12/: CMakeLists.txt
LAB12/EX1/: CMakeLists.txt  client.py  client.sh  wolfram_server.c
LAB2/: CMakeLists.txt
LAB2/EX1/: CMakeLists.txt  lab2_1.cpp
LAB2/EX2/: CMakeLists.txt  lab2_2.cpp
LAB2/EX3/: CMakeLists.txt  lab2_3.c  lab2_3.cpp
LAB2/EX4/: CMakeLists.txt  lab2_4.cpp
LAB3/: CMakeLists.txt
LAB3/EX1/: CMakeLists.txt  lab3_1.cpp
LAB3/EX2/: CMakeLists.txt  lab3_2.c
LAB3/EX3/: CMakeLists.txt  lab3_3.c  lab3_3.cpp
LAB3/EX4/: CMakeLists.txt  lab3_4.c
LAB4/: CMakeLists.txt
LAB4/EX1/: CMakeLists.txt  lab4_1.cpp
LAB4/EX2/: CMakeLists.txt  lab4_2.cpp
LAB4/EX3/: CMakeLists.txt  lab4_3.cpp
LAB4/EX4/: CMakeLists.txt  lab4_4.cpp
LAB5/: CMakeLists.txt
LAB5/EX1/: CMakeLists.txt  lab5_1.cpp
LAB5/EX2/: CMakeLists.txt  lab5_2.c
LAB5/EX3/: CMakeLists.txt  lab5_3.c
LAB5/EX4/: CMakeLists.txt  lab5_4.c
LAB6/: CMakeLists.txt
LAB6/EX1/: message_limits.md
LAB6/EX2/: CMakeLists.txt  lab6_2.cpp
LAB6/EX3/: CMakeLists.txt  common.h  master.c  scenarios.md  (+1 more)
LAB7/: CMakeLists.txt
LAB7/EX2/: CMakeLists.txt  consumer_avg.c  consumer_f0.c  producer.c  shm_common.h
LAB8-9/: CMakeLists.txt
(+8 files in other folders)
